--- a/vueVip/package.json
+++ b/vueVip/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "message": "echo 'message de test'"
   },
   "dependencies": {
     "pinia": "^2.1.6",
